--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -1,90 +1,90 @@
 .redeem {
-    background: #33A0FF;
-    color: #fff;
-    padding: 0.6rem 10px;
+  background: #33a0ff;
+  color: #fff;
+  padding: 0.6rem 10px;
 }
 
 .voucher input {
-    border: #F1F3F4 !important;
-    opacity: 1;
+  border: #f1f3f4 !important;
+  opacity: 1;
 }
 
 .cartqty {
-    background: #F6F7F8 !important;
-    padding: 2px 10px !important;
+  background: #f6f7f8 !important;
+  padding: 2px 10px !important;
 }
 
 .addsub {
-    color: #33A0FF !important;
-    font-weight: 600 !important;
-    cursor: pointer !important;
+  color: #33a0ff !important;
+  font-weight: 600 !important;
+  cursor: pointer !important;
 }
 
 .cart_img {
-    width: 120px !important;
-    height: 150px !important;
+  width: 120px !important;
+  height: 150px !important;
 }
 
-@media screen and (max-width:760px) {
-    .header {
-        display: none !important;
-    }
+.empty-cart {
+  height: 50vh;
+}
 
-    .store_nav {
-        display: none !important;
-    }
+@media screen and (max-width: 760px) {
+  .header {
+    display: none !important;
+  }
 
-    .product_nav {
-        display: none !important;
-    }
+  .store_nav {
+    display: none !important;
+  }
 
-    hr {
-        display: none !important;
-    }
+  .product_nav {
+    display: none !important;
+  }
 
-    .voucher {
-        display: flex !important;
-        justify-content: center !important;
-    }
+  hr {
+    display: none !important;
+  }
 
-    .payment_section {
-        flex-direction: column !important;
-    }
+  .voucher {
+    display: flex !important;
+    justify-content: center !important;
+  }
 
-    .payment_values {
-        padding: 0 19px !important;
-    }
+  .payment_section {
+    flex-direction: column !important;
+  }
 
-    .responsive_1 {
-        padding: 0 !important;
-        margin-top: 15px !important;
-    }
+  .payment_values {
+    padding: 0 19px !important;
+  }
 
-    .responsive_hr {
-        display: block !important;
-    }
+  .responsive_1 {
+    padding: 0 !important;
+    margin-top: 15px !important;
+  }
 
-    .mobile_33 {
-        flex-direction: column !important;
+  .responsive_hr {
+    display: block !important;
+  }
 
-    }
+  .mobile_33 {
+    flex-direction: column !important;
+  }
 
-    .mobile_35 {
+  .mobile_35 {
+    margin: 0 !important;
+  }
 
-        margin: 0 !important;
-    }
+  .reponsive_cartcard_title {
+    margin: 25px 0px !important;
+  }
 
-    .reponsive_cartcard_title {
-        margin: 25px 0px !important;
-    }
+  .mobile_35 h4 {
+    margin: 0px 25px;
+  }
 
-    .mobile_35 h4 {
-        margin: 0px 25px;
-    }
-
-    .cartcard {
-        flex-direction: column !important;
-
-    }
-
+  .cartcard {
+    flex-direction: column !important;
+  }
 }
